--- a/project/Base.lproj/Main.storyboard
+++ b/project/Base.lproj/Main.storyboard
@@ -94,6 +94,21 @@
             </objects>
             <point key="canvasLocation" x="747" y="-2"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="wkL-8b-FIW">
+            <objects>
+                <viewController id="PJs-if-Fce" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="aTH-hC-9bC">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="Dye-qW-irt"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VCA-an-zq0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1460" y="-2"/>
+        </scene>
     </scenes>
     <resources>
         <systemColor name="systemBackgroundColor">
