--- a/project/Base.lproj/Main.storyboard
+++ b/project/Base.lproj/Main.storyboard
@@ -127,6 +127,10 @@
                                 </menu>
                                 <state key="normal" title="Button"/>
                             </button>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="U19-sZ-m9Z">
+                                <rect key="frame" x="175" y="758" width="49" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </switch>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Dye-qW-irt"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
