--- a/project/Base.lproj/Main.storyboard
+++ b/project/Base.lproj/Main.storyboard
@@ -160,6 +160,21 @@
             </objects>
             <point key="canvasLocation" x="1460" y="-2"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="9g8-Zh-zKw">
+            <objects>
+                <viewController id="yls-uH-7kg" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="EVn-jb-aqm">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="sU9-1c-bEv"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fW7-On-f9P" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2181" y="-2"/>
+        </scene>
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="zAc-2A-462"/>
