--- a/project/Base.lproj/Main.storyboard
+++ b/project/Base.lproj/Main.storyboard
@@ -102,6 +102,21 @@
             <point key="canvasLocation" x="747" y="-2"/>
         </scene>
         <!--View Controller-->
+        <scene sceneID="30p-YM-AIf">
+            <objects>
+                <viewController id="5V8-co-GvP" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="xU0-yt-9lL">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="mSD-uE-za8"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SXG-ax-PTq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1459" y="-663"/>
+        </scene>
+        <!--View Controller-->
         <scene sceneID="wkL-8b-FIW">
             <objects>
                 <viewController id="PJs-if-Fce" sceneMemberID="viewController">
