--- a/project/Base.lproj/Main.storyboard
+++ b/project/Base.lproj/Main.storyboard
@@ -132,6 +132,21 @@
             <point key="canvasLocation" x="1459" y="-663"/>
         </scene>
         <!--View Controller-->
+        <scene sceneID="KFN-JK-Lxr">
+            <objects>
+                <viewController id="68c-85-607" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="FOC-v9-FSQ">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="jKH-hy-lqz"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cDz-d4-Qcd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2181" y="-663"/>
+        </scene>
+        <!--View Controller-->
         <scene sceneID="wkL-8b-FIW">
             <objects>
                 <viewController id="PJs-if-Fce" sceneMemberID="viewController">
