--- a/project/Base.lproj/Main.storyboard
+++ b/project/Base.lproj/Main.storyboard
@@ -157,6 +157,17 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Button"/>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" showsMenuAsPrimaryAction="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lP2-8a-T8M">
+                                <rect key="frame" x="173" y="411" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <menu key="menu" id="lOq-as-3N7">
+                                    <children>
+                                        <command title="Item 1" id="ZaD-Sz-8cb"/>
+                                        <command title="Item 2" id="Mxy-dg-4dY"/>
+                                    </children>
+                                </menu>
+                                <state key="normal" title="Button"/>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="jKH-hy-lqz"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
